--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -16,8 +16,8 @@
     "name": "Желаемая зарплата",
     "from": "от",
     "rub": "45000₽",
-    "usd": "$420",
-    "eur": "€380"
+    "usd": "$650",
+    "eur": "€600"
   },
   "shedules": {
     "name": "График работы",
@@ -31,11 +31,7 @@
   },
   "employments": {
     "name": "Варианты трудоустройства",
-    "employment": [
-      "Трудовой договор",
-      "ГПД",
-      "Самозанятость"
-    ],
+    "employment": ["Трудовой договор", "ГПД", "Самозанятость"],
     "information": "Есть рекомендации от \"ВТЭК\", при официальном трудоустройстве. Предоставлю, по требованию."
   },
   "languages": {
@@ -47,7 +43,7 @@
       },
       {
         "name": "English (Basic - A1)",
-        "percent": 10
+        "percent": 15
       }
     ]
   },
@@ -63,36 +59,36 @@
         "percent": 85
       },
       {
-        "name": "BOOTSTRAP >= 4.5",
+        "name": "BOOTSTRAP >= 5.0",
         "percent": 80
       },
       {
         "name": "GIT (Version Control Systems)",
-        "percent": 70
+        "percent": 85
       },
       {
         "name": "Bash / Console",
         "percent": 40
       },
       {
-        "name": "Docker",
-        "percent": 30
+        "name": "Docker / Compose",
+        "percent": 45
       },
       {
         "name": "PHP >= 5.2",
-        "percent": 60
+        "percent": 45
       },
       {
         "name": "Node.JS",
-        "percent": 50
+        "percent": 60
       },
       {
         "name": "Express.JS",
-        "percent": 90
+        "percent": 95
       },
       {
         "name": "React.JS",
-        "percent": 30
+        "percent": 45
       },
       {
         "name": "Electron.JS",
@@ -112,7 +108,7 @@
       },
       {
         "name": "TypeORM",
-        "percent": 5
+        "percent": 15
       },
       {
         "name": "MySQL",
@@ -120,15 +116,23 @@
       },
       {
         "name": "MongoDB",
-        "percent": 50
+        "percent": 70
       },
       {
         "name": "PostgreSQL",
-        "percent": 50
+        "percent": 70
       },
       {
         "name": "C++ / C#",
         "percent": 10
+      },
+      {
+        "name": "Jest.js",
+        "percent": 10
+      },
+      {
+        "name": "GitLab CI/CD",
+        "percent": 15
       }
     ],
     "information": "* - Оценка навыка, может отличаться от действительности, чисто объективно-оценочное суждение"
@@ -143,16 +147,10 @@
         "name": "RabbitMQ"
       },
       {
-        "name": "Jest.js"
-      },
-      {
         "name": "ElasticSearch"
       },
       {
         "name": "Redux"
-      },
-      {
-        "name": "React Native"
       }
     ]
   },
@@ -191,7 +189,7 @@
     },
     "marital": {
       "name": "Семейное положение",
-      "value": "Холост"
+      "value": "Гражданский брак"
     }
   },
   "expirience": {
@@ -202,10 +200,7 @@
           "position": "Fullstack разработчик",
           "company": "Авто-Мото магазин запчастей (AUTOAVENU / MOTOAVENU)",
           "city": "г.Москва",
-          "period": [
-            "2013/02/01",
-            "2022/04/01"
-          ],
+          "period": ["2013/02/01", "2022/04/01"],
           "details": "Разработка и обслуживание сайтов с нуля, написание программ, ремонт и обслуживание компьютерной техники, настройка ПО.",
           "skills": [
             "HTML5 / CSS3",
@@ -219,37 +214,32 @@
           "position": "Системный администратор",
           "company": "Тату студия «сТАТУс»",
           "city": "г.Юрга",
-          "period": [
-            "2020/09/01",
-            "2022/04/01"
-          ],
+          "period": ["2020/09/01", "2022/04/01"],
           "details": "Обслуживание компьютерной техники 5+ ед."
         },
         {
           "position": "Системный администратор",
           "company": "Такси «Фунтик/Casper»",
           "city": "г.Юрга",
-          "period": [
-            "2020/11/01",
-            "2022/04/01"
-          ],
+          "period": ["2020/11/01", "2022/04/01"],
           "details": "Обслуживание компьютерной техники 2+ ед."
         },
         {
           "position": "Junior backend developer",
           "company": "ИП Гостев А.В",
           "city": "г.Краснодар",
-          "period": [
-            "2022/04/04",
-            null
-          ],
+          "period": ["2022/04/04", null],
           "details": "Разработка программного обеспечения",
           "skills": [
             "Nest.JS",
             "TypeORM",
             "NodeJS",
             "PostgreSQL",
-            "Jest.JS"
+            "Jest.JS",
+            "ExpressJS",
+            "MongoDB",
+            "Prometheus",
+            "Docker/Compose"
           ]
         }
       ]
@@ -261,20 +251,14 @@
           "position": "Менеджер отдела продаж",
           "company": "Goodline (ООО \"Е-Лайт-Телеком\")",
           "city": "г.Юрга",
-          "period": [
-            "2015/05/01",
-            "2015/08/01"
-          ],
+          "period": ["2015/05/01", "2015/08/01"],
           "details": "Продажа продуктов сетевого провайдера: Интернет, кабельное ТВ, ТВ приставки и т.п. В ходе работы, проходил курсы по холодным продажам."
         },
         {
           "position": "Владелец бизнеса (магазин Автозапчастей / франшиза Yandex.Taxi)",
           "company": "Индивидуальный Предприниматель",
           "city": "г.Юрга",
-          "period": [
-            "2016/08/26",
-            "2019/05/15"
-          ],
+          "period": ["2016/08/26", "2019/05/15"],
           "details": "Открытие и развитие с нуля, с последующей продажей, готового бизнеса. В ходе работы, изучил основы бухгалтерии, ведения бизнеса, текущие аспекты законодательства НК РФ и ТК РФ."
         }
       ]
