--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -15,9 +15,9 @@
   "pay": {
     "name": "Желаемая зарплата",
     "from": "от",
-    "rub": "65000₽",
-    "usd": "$650",
-    "eur": "€600"
+    "rub": "70000₽",
+    "usd": "$780",
+    "eur": "€715"
   },
   "shedules": {
     "name": "График работы",
@@ -48,7 +48,7 @@
     ]
   },
   "skills": {
-    "name": "Навыки",
+    "name": "Hard skills",
     "skill": [
       {
         "name": "Владение компьютером",
@@ -56,7 +56,7 @@
       },
       {
         "name": "HTML5 / CSS3",
-        "percent": 85
+        "percent": 60
       },
       {
         "name": "BOOTSTRAP >= 5.0",
@@ -104,7 +104,7 @@
       },
       {
         "name": "TypeScript",
-        "percent": 70
+        "percent": 80
       },
       {
         "name": "TypeORM",
@@ -128,7 +128,7 @@
       },
       {
         "name": "Jest.js",
-        "percent": 10
+        "percent": 20
       },
       {
         "name": "GitLab CI/CD",
@@ -140,12 +140,14 @@
   "learns": {
     "name": "Хочу изучить",
     "learn": [
+      { "name": "ChatGPT" },
       { "name": "k8s" },
       { "name": "RabbitMQ" },
       { "name": "ElasticSearch" },
       { "name": "Redux" },
       { "name": "gRPC" },
-      { "name": "protobuf" }
+      { "name": "protobuf" },
+      { "name": "Apache Kafka" }
     ]
   },
   "computer": {
@@ -193,6 +195,7 @@
           "details": "Разработка и обслуживание сайтов с нуля, написание программ, ремонт и обслуживание компьютерной техники, настройка ПО.",
           "skills": [
             "HTML5 / CSS3",
+            "PHP",
             "BOOTSTRAP",
             "NodeJS",
             "ExpressJS",
@@ -223,11 +226,12 @@
             "Nest.JS",
             "TypeORM",
             "NodeJS",
+            "TypeScript",
             "PostgreSQL",
             "Jest.JS",
             "ExpressJS",
             "MongoDB",
-            "Docker/Compose",
+            "Docker / Compose",
             "Gitlab CI/CD"
           ]
         }
@@ -257,11 +261,11 @@
     "name": "Дополнительная информация",
     "driver": {
       "name": "Наличие водительских прав (категории)",
-      "value": "Отсутствуют"
+      "value": "Обучаюсь на \"B\" категорию."
     },
     "free": {
       "name": "Занятия в свободное время",
-      "value": "Изучаю профильную литературу, создаю и проектирую свою систему управления умным домом(с нуля), помимо изучения профильных материалов, занимаюсь ремонтом компьютерной техники и изучаю основы сварочных работ, так же имею очень большой кругозор, следовательно интересуюсь многими темами."
+      "value": "Осваиваю специализированную литературу, разрабатываю и воплощаю в жизнь собственную систему управления \"умным домом\" с нуля. Помимо погружения в профильные материалы, владею навыками по ремонту компьютерной техники и изучаю основы сварочных работ. Мой широкий кругозор побуждает к интересу к разнообразным тематикам, стимулируя постоянное стремление к знаниям."
     },
     "qualities": {
       "name": "Личные качества",
@@ -273,8 +277,6 @@
         "Открытость",
         "Умение работать в команде",
         "Стрессоустойчивость",
-        "Аккуратность",
-        "Бережливость",
         "Cтремление к саморазвитию"
       ]
     }
