updated package.json, added github,gitlab contacts. npm -> yarn installer

--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -10,7 +10,9 @@
     "tel": "+7(900)100-10-10",
     "email": "moshkin_ura@mail.ru",
     "vk": "bikeauto",
-    "tg": "bikeauto"
+    "tg": "bikeauto",
+    "github": "moshkinura",
+    "gitlab": "moshkinura"
   },
   "pay": {
     "name": "Желаемая зарплата",
