--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
+  "lang": "Язык",
   "bio": {
     "name": "Биография",
     "fio": "Мошкин Юрий Алексеевич",
@@ -17,9 +18,9 @@
   "pay": {
     "name": "Желаемая зарплата",
     "from": "от",
-    "rub": "70000₽",
-    "usd": "$780",
-    "eur": "€715"
+    "rub": "90000₽",
+    "usd": "$1020",
+    "eur": "€930"
   },
   "shedules": {
     "name": "График работы",
@@ -187,54 +188,78 @@
   },
   "expirience": {
     "main": {
-      "name": "Опыт работы",
+      "name": "Основной опыт работы",
       "data": [
         {
-          "position": "Fullstack разработчик",
-          "company": "Авто-Мото магазин запчастей (AUTOAVENU / MOTOAVENU)",
-          "city": "г.Москва",
-          "period": ["2013/02/01", "2022/04/01"],
-          "details": "Разработка и обслуживание сайтов с нуля, написание программ, ремонт и обслуживание компьютерной техники, настройка ПО.",
-          "skills": [
-            "HTML5 / CSS3",
-            "PHP",
-            "BOOTSTRAP",
-            "NodeJS",
-            "ExpressJS",
-            "PostgreSQL"
+          "company": "Компания ITGost",
+          "position": "Middle backend developer",
+          "city": "г.Краснодар",
+          "period": ["2022/04/04", "2024/02/01"],
+          "details": [
+            {
+              "project": "**Проект: CRM для конструктора сайтов**",
+              "worked": [
+                "* Проектирование и написание модулей для улучшения функциональности CRM.",
+                "* Исправление багов и повышение надежности системы.",
+                "* Интеграция с Kubernetes для обеспечения масштабируемости и эффективного управления контейнерами.",
+                "* Покрытие кода тестами для обеспечения его стабильности и надежности.",
+                "* Работа с legacy code, включая рефакторинг и оптимизацию существующего кода для повышения производительности и улучшения поддержки."
+              ],
+              "stacks": [
+                "NodeJS",
+                "Express",
+                "PostgreSQL",
+                "Jest.JS",
+                "Docker/Compose",
+                "k8s",
+                "Redis"
+              ]
+            },
+            {
+              "project": "**Проект: Приложение для ручного и автоматизированного тестирования API (аналог Postman)**",
+              "worked": [
+                "* Проектирование и разработка оптимизированных структур баз данных.",
+                "* Разработка API, обеспечивающего эффективное взаимодействие между различными частями приложения.",
+                "* Работа с микросервисной архитектурой, обеспечивающей гибкость и масштабируемость системы.",
+                "* Настройка CI/CD процессов для стендов разработки, обеспечивая непрерывную интеграцию и доставку.",
+                "* Регулярное исправление багов для повышения качества и надежности продукта."
+              ],
+              "stacks": [
+                "NodeJS",
+                "NestJS",
+                "PostgreSQL",
+                "TypeORM",
+                "Jest.JS",
+                "Docker/Compose",
+                "Redis",
+                "Kafka",
+                "Gitlab CI/CD"
+              ]
+            }
           ]
         },
         {
-          "position": "Системный администратор",
-          "company": "Тату студия «сТАТУс»",
-          "city": "г.Юрга",
-          "period": ["2020/09/01", "2022/04/01"],
-          "details": "Обслуживание компьютерной техники 5+ ед."
-        },
-        {
-          "position": "Системный администратор",
-          "company": "Такси «Фунтик/Casper»",
-          "city": "г.Юрга",
-          "period": ["2020/11/01", "2022/04/01"],
-          "details": "Обслуживание компьютерной техники 2+ ед."
-        },
-        {
-          "position": "Middle backend developer",
-          "company": "ИП Гостев А.В",
-          "city": "г.Краснодар",
-          "period": ["2022/04/04", null],
-          "details": "Разработка программного обеспечения",
-          "skills": [
-            "Nest.JS",
-            "TypeORM",
-            "NodeJS",
-            "TypeScript",
-            "PostgreSQL",
-            "Jest.JS",
-            "ExpressJS",
-            "MongoDB",
-            "Docker / Compose",
-            "Gitlab CI/CD"
+          "company": "Авто-Мото магазин запчастей",
+          "position": "Fullstack разработчик",
+          "city": "г.Москва",
+          "period": ["2013/02/01", "2022/04/01"],
+          "details": [
+            {
+              "project": "**Проект: Интернет магазин**",
+              "worked": [
+                "* Разработка и обслуживание сайта",
+                "* Разработка программ, для внутренней работы"
+              ],
+              "stacks": [
+                "HTML5 / CSS3",
+                "PHP",
+                "BOOTSTRAP",
+                "Nginx",
+                "NodeJS",
+                "ExpressJS",
+                "PostgreSQL"
+              ]
+            }
           ]
         }
       ]
@@ -243,18 +268,32 @@
       "name": "Дополнительный опыт работы",
       "data": [
         {
-          "position": "Менеджер отдела продаж",
-          "company": "Goodline (ООО \"Е-Лайт-Телеком\")",
+          "company": "Тату студия «сТАТУс»",
+          "position": "Системный администратор",
           "city": "г.Юрга",
-          "period": ["2015/05/01", "2015/08/01"],
-          "details": "Продажа продуктов сетевого провайдера: Интернет, кабельное ТВ, ТВ приставки и т.п. В ходе работы, проходил курсы по холодным продажам."
+          "period": ["2020/09/01", "2022/04/01"],
+          "details": "Оказывал услуги по техническому обслуживанию и поддержке более чем пяти единиц компьютерной техники."
+        },
+        {
+          "position": "Системный администратор",
+          "company": "Такси «Фунтик/Casper»",
+          "city": "г.Юрга",
+          "period": ["2020/11/01", "2022/04/01"],
+          "details": "Оказывал услуги по техническому обслуживанию и поддержке более чем двух единиц компьютерной техники."
         },
         {
           "position": "Владелец бизнеса (магазин Автозапчастей / франшиза Yandex.Taxi)",
           "company": "Индивидуальный Предприниматель",
           "city": "г.Юрга",
           "period": ["2016/08/26", "2019/05/15"],
-          "details": "Открытие и развитие с нуля, с последующей продажей, готового бизнеса. В ходе работы, изучил основы бухгалтерии, ведения бизнеса, текущие аспекты законодательства НК РФ и ТК РФ."
+          "details": "Занимался созданием и развитием бизнеса с нулевой стадии до его успешной реализации. В процессе работы приобрел знания в области бухгалтерского учета, управления бизнесом, а также ознакомился с ключевыми аспектами налогового и трудового законодательства Российской Федерации."
+        },
+        {
+          "position": "Менеджер отдела продаж",
+          "company": "Goodline (ООО \"Е-Лайт-Телеком\")",
+          "city": "г.Юрга",
+          "period": ["2015/05/01", "2015/08/01"],
+          "details": "В ходе работы получил опыт в области реализации продуктов сетевого провайдера, включая Интернет-услуги, кабельное телевидение и ТВ-приставки. Прошел профессиональные курсы по техникам холодных продаж."
         }
       ]
     }
